--- a/ranking/styles2.css
+++ b/ranking/styles2.css
@@ -15,6 +15,7 @@ body {
     min-height: 100vh;
     padding: 20px; /* Adiciona espaçamento para o conteúdo */
     flex-direction: column;
+    transition: background-color 0.3s, color 0.3s;
 }
 
 .container {
@@ -211,43 +212,72 @@ tbody img {
     align-items: center; /* Centraliza verticalmente */
 }
 
-/* Toggle Switch Styles */
-.toggle-switch {
-    display: flex;
-    justify-content: center; /* Centraliza o toggle switch */
-    align-items: center;
-    margin-top: 20px; /* Espaçamento acima do toggle */
+/* Estilos para o modo escuro */
+body.dark-mode {
+    background-color: #333;
+    color: #fff;
 }
 
-.toggle-switch input[type="checkbox"] {
-    appearance: none;
-    -webkit-appearance: none;
-    width: 60px;
-    height: 30px;
-    background-color: #333; /* Cor preta */
-    border-radius: 15px;
+.dark-mode .container {
+    background-color: #444;
+}
+
+.dark-mode thead {
+    background-color: #555;
+}
+
+.dark-mode tbody tr:nth-child(even) {
+    background-color: #666;
+}
+
+.dark-mode tbody tr:hover {
+    background-color: #777;
+}
+
+/* Toggle Switch */
+.switch {
     position: relative;
-    outline: none;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    margin: 20px 0;
 }
 
-.toggle-switch input[type="checkbox"]:checked {
-    background-color: #007bff; /* Azul quando ativado */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
 }
 
-.toggle-switch input[type="checkbox"]::before {
-    content: '';
-    width: 26px;
-    height: 26px;
-    background-color: #fff;
-    border-radius: 50%;
+.slider {
     position: absolute;
-    top: 2px;
-    left: 2px;
-    transition: transform 0.3s ease;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #000;
+    transition: 0.4s;
+    border-radius: 34px;
 }
 
-.toggle-switch input[type="checkbox"]:checked::before {
-    transform: translateX(30px);
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: 0.4s;
+    border-radius: 50%;
+}
+
+input:checked + .slider {
+    background-color: #fff;
+}
+
+input:checked + .slider:before {
+    transform: translateX(26px);
+    background-color: #000;
 }
