--- a/impacto/styles4.css
+++ b/impacto/styles4.css
@@ -177,7 +177,7 @@ body.dark-mode .links a:hover {
 }
 
 body.dark-mode .calc h1 {
-    color: #0056b3;
+    color: #007BFF;
 }
 
 body.dark-mode .calc h3 {
