--- a/eficiencia/styles3.css
+++ b/eficiencia/styles3.css
@@ -34,6 +34,7 @@ body {
 .ref .email {
     margin-top: 20px;
     text-align: center;
+    color: #007bff;
 }
 
 /* Estilo para profile e banner */
