--- a/ranking/styles2.css
+++ b/ranking/styles2.css
@@ -284,3 +284,39 @@ input:checked + .slider:before {
     background-color: #000;
 }
 
+
+/* Estilos do Popup */
+.popup {
+    display: none; /* Oculta o popup por padrão */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Fundo escuro com opacidade */
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* Garante que o popup esteja acima de outros conteúdos */
+}
+
+.popup-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    width: 80%;
+    max-width: 500px;
+    text-align: center;
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 24px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close-btn:hover {
+    color: red;
+}
