--- a/ranking/styles2.css
+++ b/ranking/styles2.css
@@ -285,38 +285,32 @@ input:checked + .slider:before {
 }
 
 
-/* Estilos do Popup */
+/* No seu arquivo styles2.css ou diretamente no HTML */
 .popup {
-    display: none; /* Oculta o popup por padrão */
+    display: none; /* Ocultar o popup por padrão */
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Fundo escuro com opacidade */
+    background: rgba(0,0,0,0.5);
     justify-content: center;
     align-items: center;
-    z-index: 1000; /* Garante que o popup esteja acima de outros conteúdos */
 }
 
 .popup-content {
-    background-color: #fff;
+    background: white;
     padding: 20px;
     border-radius: 5px;
+    position: relative;
     width: 80%;
-    max-width: 500px;
-    text-align: center;
+    max-width: 600px;
 }
 
 .close-btn {
     position: absolute;
     top: 10px;
-    right: 20px;
-    font-size: 24px;
-    font-weight: bold;
+    right: 10px;
+    font-size: 20px;
     cursor: pointer;
-}
-
-.close-btn:hover {
-    color: red;
 }
