--- a/craft/styles5.css
+++ b/craft/styles5.css
@@ -23,8 +23,9 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 500px;
+    max-width: 1000px;
     width: 100%;
+    margin: 0 auto;
     transition: background-color 0.3s, color 0.3s;
 }
 
@@ -60,6 +61,11 @@ body {
     border-radius: 5px;
     transition: background 0.3s;
 }
+
+.form-group {
+    margin-bottom: 15px;
+}
+
 
 .links a:hover {
     background: #0056b3;
@@ -109,7 +115,7 @@ body {
 }
 
 /* Estilo para os resultados */
-.results {
+.result {
     margin-top: 20px;
     text-align: center;
 }
