--- a/craft/styles5.css
+++ b/craft/styles5.css
@@ -23,7 +23,7 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 1200px;
+    max-width: 1000px;
     width: 100%;
     margin: 0 auto;
     transition: background-color 0.3s, color 0.3s;
@@ -91,7 +91,7 @@ button:hover {
 
 
 input[type="number"] {
-    width: 100%;
+    width: 200px;
     padding: 8px;
     font-size: 14px;
     border: 1px solid #ddd;
