--- a/craft/styles5.css
+++ b/craft/styles5.css
@@ -153,15 +153,11 @@ input.miner-data {
     margin-bottom: 20px; /* Espaço inferior para separar da próxima seção */
 }
 
-.form-table th, .form-table td {
+.form-table td {
     padding: 10px;
     vertical-align: middle;
 }
 
-.form-table th {
-    background-color: #f0f0f0;
-    font-weight: bold;
-}
 
 .form-table label {
     display: block;
@@ -178,10 +174,13 @@ input.miner-data {
 }
 
 /* Estilo adicional para a linha de cabeçalho */
-.form-table th[colspan="4"] {
+.form-table th {
     text-align: center;
     background-color: #007bff;
     color: #fff;
+    font-weight: bold
+    padding: 10px;
+    vertical-align: middle;
 }
 
 
