--- a/craft/styles5.css
+++ b/craft/styles5.css
@@ -220,7 +220,7 @@ body.dark-mode table {
 }
 
 body.dark-mode th {
-    background-color: #777;
+    background-color: #0056b3;
 }
 
 /* Estilo para o toggle switch */
