--- a/craft/styles5.css
+++ b/craft/styles5.css
@@ -325,7 +325,8 @@ input:checked + .slider:before {
     }
 
     table {
-        font-size: 14px;
+        font-size: 12px;
+        overflow-x: auto; /* Caso queira testar, remova este se não quiser rolagem horizontal */
     }
 }
 
@@ -345,18 +346,13 @@ input:checked + .slider:before {
     }
 
     table {
-        width: 100%;
-        border-collapse: collapse;
-        font-size: 12px;
+        font-size: 10px;
+        overflow-x: auto; /* Caso queira testar, remova este se não quiser rolagem horizontal */
     }
-   
+
     .switch {
         width: 50px;
         height: 28px;
-    }
-
-    .slider {
-        border-radius: 28px; /* Ajusta o border-radius para caber melhor */
     }
 
     .slider:before {
