--- a/recompensas/styles6.css
+++ b/recompensas/styles6.css
@@ -306,7 +306,8 @@ input:checked + .slider:before {
     }
 
     table {
-        font-size: 14px;
+        font-size: 12px;
+        overflow-x: auto; /* Caso queira testar, remova este se não quiser rolagem horizontal */
     }
 }
 
@@ -322,20 +323,12 @@ input:checked + .slider:before {
 
     input[type="number"], button {
         width: 100%;
-        font-size: 12px;
+        font-size: 10px;
     }
 
     table {
         font-size: 12px;
+        overflow-x: auto; /* Caso queira testar, remova este se não quiser rolagem horizontal */
     }
 
-    .switch {
-        width: 50px;
-        height: 28px;
-    }
-
-    .slider:before {
-        height: 22px;
-        width: 22px;
-    }
 }
