--- a/recompensas/styles6.css
+++ b/recompensas/styles6.css
@@ -287,6 +287,7 @@ input:checked + .slider:before {
     text-decoration: underline;
 }
 
+/* Responsividade */
 @media (max-width: 768px) {
     .container {
         padding: 10px;
@@ -307,7 +308,21 @@ input:checked + .slider:before {
 
     table {
         font-size: 12px;
-        overflow-x: auto; /* Caso queira testar, remova este se não quiser rolagem horizontal */
+        overflow-x: auto; /* Permite rolagem horizontal se necessário */
+    }
+
+/* Esconde colunas específicas em telas menores */
+    @media only screen and (max-width: 768px) {
+        #dataTable th:nth-child(5),
+        #dataTable td:nth-child(5),
+        #dataTable th:nth-child(6),
+        #dataTable td:nth-child(6),
+        #dataTable th:nth-child(7),
+        #dataTable td:nth-child(7),
+        #dataTable th:nth-child(8),
+        #dataTable td:nth-child(8) {
+            display: none;
+        }
     }
 }
 
@@ -328,7 +343,16 @@ input:checked + .slider:before {
 
     table {
         font-size: 10px;
-        overflow-x: auto; /* Caso queira testar, remova este se não quiser rolagem horizontal */
+        overflow-x: auto; /* Permite rolagem horizontal se necessário */
     }
 
+    /* Esconde colunas adicionais em telas ainda menores */
+    @media only screen and (max-width: 480px) {
+        #dataTable th:nth-child(3),
+        #dataTable td:nth-child(3),
+        #dataTable th:nth-child(4),
+        #dataTable td:nth-child(4) {
+            display: none;
+        }
+    }
 }
