--- a/craft/styles5.css
+++ b/craft/styles5.css
@@ -326,7 +326,15 @@ input:checked + .slider:before {
 
     table {
         font-size: 12px;
-        overflow-x: auto; /* Caso queira testar, remova este se não quiser rolagem horizontal */
+        overflow-x: auto; /* Permite rolagem horizontal se necessário */
+    }
+
+    /* Esconde a coluna 3 em telas menores */
+    @media only screen and (max-width: 768px) {
+        table th:nth-child(3),
+        table td:nth-child(3) {
+            display: none;
+        }
     }
 }
 
@@ -347,6 +355,14 @@ input:checked + .slider:before {
 
     table {
         font-size: 10px;
-        overflow-x: auto; /* Caso queira testar, remova este se não quiser rolagem horizontal */
+        overflow-x: auto; /* Permite rolagem horizontal se necessário */
+    }
+
+    /* Esconde a coluna 3 em telas ainda menores */
+    @media only screen and (max-width: 480px) {
+        table th:nth-child(3),
+        table td:nth-child(3) {
+            display: none;
+        }
     }
 }
