--- a/queima/styles4.css
+++ b/queima/styles4.css
@@ -87,7 +87,7 @@ body {
     align-items: center;
 }
 
-#textInput {
+.textInput {
     padding: 5px;
     font-size: 16px;
     margin-right: 10px;
