--- a/impacto2/styles4.css
+++ b/impacto2/styles4.css
@@ -266,6 +266,7 @@ input:checked + .slider:before {
 
 .popup-content {
     background: #fff;
+    color: #000;
     padding: 20px;
     width: 80%;
     max-width: 800px;
