--- a/styles.css
+++ b/styles.css
@@ -190,3 +190,36 @@ input:checked + .slider:before {
     transform: translateX(26px);
     background-color: #000;
 }
+
+.btn-dourado {
+  width: 160px;
+  height: 45px;
+  margin: auto;
+  border: none;
+  border-radius: 40px;
+  background: linear-gradient(to right,#bf953f,#fcf6ba,#b38728,#fbf5b7,#aa771c);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  font-size: 1em;
+  letter-spacing: 3px;
+  color: #000000;
+  font-weight: 600;
+  cursor: pointer;
+  text-decoration: none;
+  position: relative;
+  z-index: 2;
+  transition-duration: 0.5s;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.144);
+  background-size: 250% 200%;
+  padding: 0 20px;
+}
+
+.btn-dourado:hover {
+  transform: scale(0.95);
+  letter-spacing: 2px;
+  transition-duration: 0.5s;
+  animation: gradient 0.5s ease infinite;
+  background-position: 22%;
+}
