--- a/calculadora/styles5.css
+++ b/calculadora/styles5.css
@@ -89,6 +89,14 @@ button:hover {
     text-align: center;
 }
 
+input[type="text"] {
+    width: 200px;
+    padding: 8px;
+    font-size: 14px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+}
 
 input[type="number"] {
     width: 200px;
