--- a/calculadora/styles5.css
+++ b/calculadora/styles5.css
@@ -107,6 +107,13 @@ input[type="number"] {
     background-color: #f9f9f9;
 }
 
+select {
+    padding: 8px;
+    font-size: 14px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+}
 
 .calc {
     padding: 15px;
